Added Sampling to NLP

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -96,6 +96,11 @@
     "\n",
     "<img src=\"https://miro.medium.com/v2/resize:fit:1056/1*GkJpulpSAIm6GTeC1dVR_w.png\" width=500>\n",
     "\n",
+    "Some common features of good word embeddings are\n",
+    "1. Dense vectors: the word vectors are dense and continuous with mainly non-zero elements\n",
+    "2. Lower dimensionality: the embedding size is usuaslly a lot smaller than the vocabulary size, allowing faster computation\n",
+    "3. Semantic relationship: words with similar meaning will have similar embeddings in the vector space\n",
+    "\n",
     "## Embedding similarity\n",
     "The distance and direction between vectors represents their relationship\n",
     "\n",
@@ -116,11 +121,6 @@
     "\n",
     "<img src=\"https://miro.medium.com/v2/resize:fit:1400/1*Bq6lIOdjCK172I1V04RwLA.png\" width=500>\n",
     "\n",
-    "### t-SNE (t-distributed Stochastic Neighbor Embedding)\n",
-    "t-SNE is a technique aimed at reducing high-dimensional embeddings into a lower dimensional space. In practice, it is commonly used to visualize word vectors in the 2D space\n",
-    "\n",
-    "<img src=\"https://stanford.edu/~shervine/teaching/cs-230/illustrations/t-sne-en.png?411bf8ff5d5c06c6e90cae95f7110ff1\" width=500>\n",
-    "\n",
     "\n",
     "## Apply word embedding\n",
     "Word embeddings is widely used for transfer learning\n",
@@ -137,9 +137,18 @@
     "Word2vec is a framework aimed at learning word embeddings by estimating the likelihood that a given word is surrounded by other words\n",
     "\n",
     "### Skip-gram\n",
-    "The skip-gram word2vec model is a supervised training model that takes in an context word, $c$, and will predict a target word, $t$, where $c$ is randomly selected within a window around $t$. First, we convert $c$ from its one-hot vector, $o_c$, into embedding, $e_c$, using the embedding matrix, $E$. Then, we feed the embedding, $e_c$, into a softmax unit to predict the probability of each word in the vocabulary list with size $m$ to be the target word, where\n",
+    "The skip-gram word2vec model is a supervised training model that takes in a context word, $c$, and will predict a target word, $t$, where $c$ is randomly selected within a window around $t$. First, we convert $c$ from its one-hot vector, $o_c$, into embedding, $e_c$, using the embedding matrix, $E$, where\n",
     "\n",
-    "$$P(t|c) = \\frac{e^{\\theta^T_te_c}}{\\sum^{m}_{j=1}e^{\\theta^T_je_c}}$$\n",
+    "$$e_c = E o_c$$\n",
+    "\n",
+    "$e_c$ has the dimension of the embedding size, $N$, and $o_c$ has the vocabulary size $V$. The embedding matrix has the size $(N, V)$.\n",
+    "\n",
+    "Then, we feed the embedding, $e_c$, into a second matrix, $W$ with dimension $(V, N)$, to obtain an activation vector, $a$ with dimension $V$, where\n",
+    "$$a = W e_c$$\n",
+    "\n",
+    "Finally, we pass in $a$ into a softmax unit to predict the probability of each word in the vocabulary list of size $V$ to be the target word, where\n",
+    "\n",
+    "$$P(t|c) = \\frac{e^{\\theta^T_te_c}}{\\sum^{m}_{j=1}e^{\\theta^T_je_c}} = \\frac{e^{a_t}}{\\sum^{V}_{j=1}e^{a_j}}$$\n",
     "\n",
     "$P(t|c)$: the probability of a word being the target word, $t$, given the context word, $c$\n",
     "\n",
@@ -179,14 +188,11 @@
     "\n",
     "Initially, we initialize $e$ and $\\theta$ randomly. After training, given the symmetry that $e$ and $\\theta$ play in this model, the final word embedding $e_w^{final} = \\frac{e_w + \\theta_w}{2}$\n",
     "\n",
-    "# Sentiment classification\n",
-    "Sentiment classification predicts the sentiment based on a given sentence\n",
+    "# Visualize word embeddings in low dimension:\n",
+    "## t-SNE (t-distributed Stochastic Neighbor Embedding)\n",
+    "t-SNE is a technique aimed at reducing high-dimensional embeddings into a lower dimensional space. In practice, it is commonly used to visualize word vectors in the 2D space\n",
     "\n",
-    "To make predictions, we first convert all the words in the sentence from one-hot vector into embeddings. Then, take the average or sum of the embeddings and feed it into a softmax unit for classificatioin. An issue of this method is that it is not good at catching multiple negations in the same sentence\n",
-    "\n",
-    "Another method is to feed the word embeddings of the sentence into a RNN by time steps and feed the activation from the last time step into a softmax unit for classification\n",
-    "\n",
-    "<img src=\"https://www.tensorflow.org/static/text/tutorials/images/bidirectional.png\" width=400>"
+    "<img src=\"https://miro.medium.com/v2/resize:fit:1400/format:webp/1*p6W2UNZvc14eOEHY4lw1zw.png\" width=500>"
    ]
   },
   {
@@ -391,6 +397,15 @@
     "\n",
     "2. For the generation process, we find the sentence with max probability given the encoding, $P(y^{<1>}, ..., y^{<T_y>}|encoding)$. The greedy search does not work well in this condition because it only maxmizes the probability of each word based on the previous words, but not maxmizes the probability of the entire generated sequence. A solution to this is beam search, which maximizes the probability for the output sentence instead of each word \n",
     "\n",
+    "# How Seq2Seq model pick the next word\n",
+    "\n",
+    "## Greedy search\n",
+    "Greedy search means the model always picked the token that has the highest predicted probablitity. Despite greedy search being simple and fast, there are some key issues with this approach\n",
+    "\n",
+    "1. Maximizing the probability at token level does not guarantee the highest probability at sentence level\n",
+    "2. Always picking the highest probablity token makes the generation deterministic, meaning giving the same input, a model will always produce the same output\n",
+    "\n",
+    "\n",
     "## Beam search\n",
     "Beam search is used to find the most likely output sequence, $y$, given the input encoding, $x$\n",
     "\n",
@@ -434,27 +449,59 @@
     "\n",
     "Note: if length normalization is applied, the objective should be compared instead of the probability\n",
     "\n",
-    "## Bleu score\n",
-    "The bilingual evaluation understudy (Bleu) score quantifies how good a machine translation is by computing a similarity score based on n-gram precision\n",
+    "Beam search is a better option than greedy search, but there are still key issues with this method\n",
     "\n",
-    "The bleu score on n-gram only is\n",
-    "$$p_n = \\frac{\\sum_{n-gram \\in \\hat y} \\text{count}_{clip}(\\text{n-gram})}{\\sum_{n-gram \\in \\hat y} \\text{count}(\\text{n-gram})}$$\n",
+    "1. Even though beam search explores multiple candidates, it is still greedy in nature. It focuses on sequences with the highest cumulative probabilities, which will lead to low diversity output\n",
+    "2. Larger $B$ values lead to linear growth in computation time and memory usage\n",
     "\n",
-    "$p_n$: n-gram precision calculated by the number of correct predicted n-gram over the number of total predicted n-grams\n",
+    "## Sampling\n",
+    "Sampling is one of the most commonly used decoding methods in modern language models because it introduces controlled randomness, which helps improve the diversity and creativity of generated outputs\n",
     "\n",
-    "$\\sum_{n-gram \\in \\hat y}$: for each contiguous sequences in the generated sequence\n",
+    "Sampling works by adding randomness when picking the next token. When the model select the next token, it will samples a token randomly, in proportion to its softmax probability. This means less probable token may still be chosen, but with a very low chance.\n",
     "\n",
-    "$\\text{count}_{clip}(\\text{n-gram})$: the maximum number of a n-gram appears in only one reference\n",
+    "### Hallucination and solutions\n",
+    "Despite the sampling enables more diversity and creativity, it will also introduce hallucination in language model, which means the model will generate output that doesn't make sense. This is because the natural of sampling means that all words inside the vocabulary has a chance of being picked, no matter how unprobable it is. Therefore, when a less probable word is pick, the output sentence is unlikely to make sense\n",
     "\n",
-    "$\\text{count}(\\text{n-gram})$: the total number of n-gram in the genreated sequence\n",
+    "While sampling enables greater diversity and creativity in language models, it also increases the risk of hallucination, which means the model generates outputs that are grammatically incorrect, illogical, or nonsensical.\n",
     "\n",
+    "This happens because, by its nature, sampling allows the model to sometime select low probability tokens. Although these tokens can contribute to creative outputs, they may also lead the sentence that doesn't make sense. The lower the probability of a selected word, the more likely it is to break coherence or accuracy in the generated output\n",
     "\n",
-    "The combined bleu score is\n",
-    "$$\\text{Bleu score} = exp({\\frac{1}{n}\\sum_{k=1}^{n}p_k})$$\n",
+    "#### Top-k sampling\n",
+    "Top-k sampling prevents hallucination by only allowing the model to sample the next token from the top-k most probable words, which prevents the model from pick low-probable words that doesn't make sense\n",
     "\n",
-    "The bleu score is a number between 0 and 1. The closer the score to 1, the more similar the generated sequence and the reference are. However, a score of 0.6 - 0.7 is considered a good score since a score too close to one indicates overfitting\n",
+    "#### Top-p sampling\n",
+    "Top-p sampling selects the smallest set of tokens whose cumulative probability exceed $p$, where $p = 0.8-0.9$ typically.\n",
     "\n",
-    "## BLEU Score (Bilingual Evaluation Understudy)\n",
+    "Despite both top-k and top-p search only select from a small set of possible tokens to prevent hallucination, these methods are still stochcastic because the selection process is still random\n",
+    "\n",
+    "#### Temperature\n",
+    "The temperature, $t$, is a hyperparameter that controls the creativity and diversity of the generate output by adjusting the sharpness of the softmax distribution. A high temperature will cause the model to generate more creative outputs by using less probable words, and a low temperature will cause the model to generate less creative outputs by using more probable words\n",
+    "\n",
+    "With temperature, $t$ the softmax function for computing the probability of each token in the vocabulary with size $V$ becomes\n",
+    "\n",
+    "$$p(w_i) = \\frac{exp(\\frac{w_i}{t})}{\\sum^{V}_{i = 1}exp(\\frac{w_i}{t})}$$\n",
+    "\n",
+    "$w_i$: the $i$th token in the vocabulary\n",
+    "\n",
+    "$V$: the size of vaocabulary\n",
+    "\n",
+    "$p(w_i)$: the probability of selecting the $i$th token\n",
+    "\n",
+    "* $t = 1$: the formula is the same as normal softmax, nothing changes\n",
+    "\n",
+    "* $t < 1$: makes the distribution \"sharper\", so the model is less likely to select less probable words (closer to greedy), which means less diversity but safer output\n",
+    "\n",
+    "* $t > 1$: makes the distribution \"wider\", so the model is more likely to select more probable words, which means more diversity but may cause hallucination\n",
+    "\n",
+    "These sampling methods can be used in combination to achieve better results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "849de680",
+   "metadata": {},
+   "source": [
+    "# BLEU Score (Bilingual Evaluation Understudy)\n",
     "\n",
     "The **BLEU (Bilingual Evaluation Understudy) score** is a metric used to evaluate the quality of machine-translated text by comparing it to one or more reference translations. It measures **n-gram precision** while incorporating a penalty for overly short translations.\n",
     "\n",
@@ -509,6 +556,21 @@
     "  - **0.6 - 0.7**: Considered **good** machine translation.\n",
     "  - **0.8 - 1.0**: Indicates potential **overfitting** (rare in practical use cases).\n",
     "  - **< 0.3**: Poor translation quality."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "561be0a8",
+   "metadata": {},
+   "source": [
+    "# Sentiment classification\n",
+    "Sentiment classification predicts the sentiment based on a given sentence\n",
+    "\n",
+    "To make predictions, we first convert all the words in the sentence from one-hot vector into embeddings. Then, take the average or sum of the embeddings and feed it into a softmax unit for classificatioin. An issue of this method is that it is not good at catching multiple negations in the same sentence\n",
+    "\n",
+    "Another method is to feed the word embeddings of the sentence into a RNN by time steps and feed the activation from the last time step into a softmax unit for classification\n",
+    "\n",
+    "<img src=\"https://www.tensorflow.org/static/text/tutorials/images/bidirectional.png\" width=400>"
    ]
   },
   {
@@ -1059,6 +1121,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "053e607f",
+   "metadata": {},
+   "source": [
+    "# Reinforcement Learning From Human Feedback\n",
+    "\n",
+    "# Direct "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d9a2f07",
+   "metadata": {},
+   "source": [
+    "# Agentic LLMs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "17ec0fd7",
    "metadata": {},
    "source": [
@@ -1069,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dc362b1",
+   "id": "8386525b",
    "metadata": {},
    "outputs": [],
    "source": []
