Complete CBOW in NLP

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -134,7 +134,77 @@
     "Note: the individual components of the learned word embeddings are not necessarily interpretable since the axis chosen by the algorithm does not necessarily align with interpretable axis\n",
     "\n",
     "## Word2vec\n",
-    "Word2vec is a framework aimed at learning word embeddings by estimating the likelihood that a given word is surrounded by other words\n",
+    "Word2vec is a framework aimed at learning word embeddings through a neural network by estimating the likelihood that a given word is surrounded by other words\n",
+    "\n",
+    "There are two types of word2vec model, continuous bag of words (CBOW) and skip-gram. CBOW learns the word embeddings by trying to predict a target word giving its surrounding context words, and skip-gram learns the embeddings by trying to predict all the surrounding context words given a target word\n",
+    " \n",
+    "<img src=\"https://community.alteryx.com/t5/image/serverpage/image-id/45458iDEB69E518EBA3AD9/image-size/large?v=v2&px=999\" width=500>\n",
+    "\n",
+    "### Continuous Bag of Words (CBOW)\n",
+    "CBOW predicts the probability of a target word occurring, given the surrounding context words. Essentially, CBOW trains a model to produce similar embeddings for words that appear in similar contexts by pulling related word vectors closer together in the embedding space and pushing unrelated ones further apart\n",
+    "\n",
+    "#### Steps for Training Word Embeddings with CBOW:\n",
+    "\n",
+    "1. **Corpus and Vocabulary**:  \n",
+    "   Start with a text corpus and construct a vocabulary of size $V$. Each word is assigned a unique index and represented as a one-hot vector $o_i$ with dimension $V$\n",
+    "\n",
+    "2. **Context Window and Embedding Size**:  \n",
+    "   Define a context window of size $C$. For each center word, its context consists of $2C$ surrounding words (C to the left and C to the right, excluding the center). Also define an embedding dimension $N$, which is the size of all the word vectors.\n",
+    "\n",
+    "3. **Generate Training Examples**:  \n",
+    "   Slide a window of size $2C+1$ across the corpus. For each window, use the $2C$ context words as input and the center word as the prediction target.\n",
+    "\n",
+    "4. **Embedding Lookup**:  \n",
+    "   For each one-hot encoded context word $o_i$, use an embedding matrix $E$ with dimension $(V, N)$ to obtain its word vector. The embedding matrix converts an one-hot vector into a unique word embedding by looking up its rows:\n",
+    "\n",
+    "   $$e_i = o_i^\\top E$$\n",
+    "\n",
+    "   After retrieving all $2C$ context vectors, stack them as:\n",
+    "   $$\n",
+    "   e = [e_1, e_2, \\dots, e_{2C}]\n",
+    "   $$\n",
+    "   \n",
+    "   where $e$ has the dimension of $(2C, N)$\n",
+    "\n",
+    "5. **Aggregate Context Embeddings**:  \n",
+    "   Average all the context embeddings inside $e$ to obtain a single vector:\n",
+    "\n",
+    "   $$\n",
+    "   h = \\frac{1}{2C} \\sum_{i=1}^{2C}e_i\n",
+    "   $$\n",
+    "   \n",
+    "   where $h$ has the dimension of $N$ and it captures the average context based on all context words\n",
+    "\n",
+    "6. **Output Layer**:  \n",
+    "   Multiply the averaged vector $h$ with an output weight matrix $W$ with dimension $(N, V)$ to compute unnormalized scores (logits) over the vocabulary:\n",
+    "\n",
+    "   $$\n",
+    "   u = h^\\top W\n",
+    "   $$\n",
+    "   where $u$ has the dimension of $V$\n",
+    "\n",
+    "7. **Softmax**:  \n",
+    "   Apply the softmax function to convert logits into a probability distribution over the vocabulary:\n",
+    "\n",
+    "   $$\n",
+    "   p_j = \\frac{\\exp(u_j)}{\\sum_{k=0}^{V-1} \\exp(u_k)}\n",
+    "   $$\n",
+    "   \n",
+    "   Note: the sum of probability over the entire vocabulary is 1, where $\\sum^{V}_{i=1}p_i = 1$\n",
+    "\n",
+    "8. **Cross-Entropy Loss**:  \n",
+    "   Use cross entropy to calculate the loss\n",
+    "\n",
+    "   $$\n",
+    "   L = -\\sum_{i=0}^{V-1} y_i \\log(p_i) = -\\log(p_{\\text{true}})\n",
+    "   $$\n",
+    "   \n",
+    "   For cross entropy loss, only one word inside the vocabulary will have the ground truth of one, so only this term contributes to the loss calculation, and the words with ground truth of zero do not contribute to the loss directly. However, the loss function still implicitly penalizes for misclassification because weight updates that increase the probability of a class must decrease the probability of the incorrect class\n",
+    "\n",
+    "9. **Training and Embedding Extraction**:  \n",
+    "   Use backpropagation to update both $E$ (the embedding matrix) and $W$. After training, we can extract the embedding matrix $E$ from the model and use it to convert one-hot vectors into word embeddings.\n",
+    "\n",
+    "<img src=\"https://mlarchive.com/wp-content/uploads/2024/01/New-Project-1024x595.png\" width=500>\n",
     "\n",
     "### Skip-gram\n",
     "The skip-gram word2vec model is a supervised training model that takes in a context word, $c$, and will predict a target word, $t$, where $c$ is randomly selected within a window around $t$. First, we convert $c$ from its one-hot vector, $o_c$, into embedding, $e_c$, using the embedding matrix, $E$, where\n",
@@ -498,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "849de680",
+   "id": "25fccc75",
    "metadata": {},
    "source": [
     "# BLEU Score (Bilingual Evaluation Understudy)\n",
@@ -560,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "561be0a8",
+   "id": "d02719b2",
    "metadata": {},
    "source": [
     "# Sentiment classification\n",
@@ -1121,7 +1191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "053e607f",
+   "id": "f406d5d6",
    "metadata": {},
    "source": [
     "# Reinforcement Learning From Human Feedback\n",
@@ -1131,7 +1201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d9a2f07",
+   "id": "79f2e2a0",
    "metadata": {},
    "source": [
     "# Agentic LLMs"
@@ -1149,7 +1219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8386525b",
+   "id": "0b7ba558",
    "metadata": {},
    "outputs": [],
    "source": []
