Modify skip-gram in NLP

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -192,7 +192,7 @@
     "   \n",
     "   Note: the sum of probability over the entire vocabulary is 1, where $\\sum^{V}_{i=1}p_i = 1$\n",
     "\n",
-    "8. **Cross-Entropy Loss**:  \n",
+    "8. **Cross Entropy Loss**:  \n",
     "   Use cross entropy to calculate the loss\n",
     "\n",
     "   $$\n",
@@ -207,35 +207,36 @@
     "<img src=\"https://mlarchive.com/wp-content/uploads/2024/01/New-Project-1024x595.png\" width=500>\n",
     "\n",
     "### Skip-gram\n",
-    "The skip-gram word2vec model is a supervised training model that takes in a context word, $c$, and will predict a target word, $t$, where $c$ is randomly selected within a window around $t$. First, we convert $c$ from its one-hot vector, $o_c$, into embedding, $e_c$, using the embedding matrix, $E$, where\n",
+    "The Skip-Gram model is another Word2Vec model that learns word embeddings by predicting surrounding context words given a center (target) word. It is essentially the inverse of CBOW. The model is trained such that words that appear in similar contexts have similar vector representations.\n",
     "\n",
-    "$$e_c = E o_c$$\n",
+    "#### Steps for Training Word Embeddings with Skip-Gram:\n",
+    "The steps for training skip-gram are very similar to that of CBOW, but with the following differences\n",
     "\n",
-    "$e_c$ has the dimension of the embedding size, $N$, and $o_c$ has the vocabulary size $V$. The embedding matrix has the size $(N, V)$.\n",
+    "1. In step 3 (Generate Training Examples), we reverse the input and label by making the target word as the input and the $2C$ context words become the prediction targets.\n",
     "\n",
-    "Then, we feed the embedding, $e_c$, into a second matrix, $W$ with dimension $(V, N)$, to obtain an activation vector, $a$ with dimension $V$, where\n",
-    "$$a = W e_c$$\n",
+    "2. Step 5 (Aggregate Context Embeddings) in CBOW can be skipped since there's only one input word, so there is no need to average the embeddings and the dimension of $h$ is $N$\n",
     "\n",
-    "Finally, we pass in $a$ into a softmax unit to predict the probability of each word in the vocabulary list of size $V$ to be the target word, where\n",
+    "3. In step 9 (Cross Entropy Loss), since the ground truth labels are multiple context words, so instead of only counting the loss for only one word like CBOW, the total loss for each target word is the sum of the negative log-probability of each context words, where\n",
+    "   $$\n",
+    "   L = \\sum_{i=0}^{2C-1} -\\log(p_{\\text{context}_i})\n",
+    "   $$\n",
+    "    Then, we use this loss to back propagate and train the embedding matrix\n",
     "\n",
-    "$$P(t|c) = \\frac{e^{\\theta^T_te_c}}{\\sum^{m}_{j=1}e^{\\theta^T_je_c}} = \\frac{e^{a_t}}{\\sum^{V}_{j=1}e^{a_j}}$$\n",
+    "<img src=\"https://aegis4048.github.io/images/featured_images/skip-gram.png\" width=700>\n",
     "\n",
-    "$P(t|c)$: the probability of a word being the target word, $t$, given the context word, $c$\n",
+    "### CBOW VS Skip-gram\n",
     "\n",
-    "$\\theta_t$: the parameters in the softmax unit that associate with $t$\n",
+    "<img src=\"https://miro.medium.com/v2/resize:fit:1136/format:webp/1*x6aahsfT5wtqL6x5Xj-cEg.png\" width=500>\n",
     "\n",
-    "Loss function:\n",
-    "$$L(\\hat y, y) = - \\sum_{i=1}^{m}y_i log(\\hat y_i)$$\n",
-    "\n",
-    "We can then use gradient descent to train the parameters within the softmax unit and the embedding matrix, $E$\n",
+    "### Negative sampling\n",
+    "In practice, Skip-Gram with softmax is computationally expensive for large vocabularies. To address this, **negative sampling** or **hierarchical softmax** is often used to approximate the full softmax efficiently.\n",
     "\n",
     "To sample a context word, $c$, certain weight is used instead of the random distribution to prevent over selecting most common words\n",
     "\n",
     "Note: summing over the whole vocabulary in the denominator of the softmax part makes this model computationally expensive. To solve this, we can use a hierarchical softmax classifier instead of a normal classifier to speed up the computation\n",
     "\n",
-    "<img src=\"https://aegis4048.github.io/images/featured_images/skip-gram.png\" width=700>\n",
     "\n",
-    "### Negative sampling\n",
+    "\n",
     "Use the same approach as the skip-gram model to sample a context word, $c$, and a target, $t$ and set this pair as the positive pair. Then, use $c$ and pair it up with $k$ random selected words from the vocabulary dictionary to create $k$ negative samples\n",
     "\n",
     "To train the embedding matrix, we covert the both $c$ and $t$ into their embeddings and feed it into a network with logistic units to calculate the probability on how likely the context word and target word will appear together, where\n",
@@ -568,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25fccc75",
+   "id": "646435b7",
    "metadata": {},
    "source": [
     "# BLEU Score (Bilingual Evaluation Understudy)\n",
@@ -630,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d02719b2",
+   "id": "e550979f",
    "metadata": {},
    "source": [
     "# Sentiment classification\n",
@@ -1191,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f406d5d6",
+   "id": "72f1e777",
    "metadata": {},
    "source": [
     "# Reinforcement Learning From Human Feedback\n",
@@ -1201,7 +1202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79f2e2a0",
+   "id": "f30f5102",
    "metadata": {},
    "source": [
     "# Agentic LLMs"
@@ -1219,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b7ba558",
+   "id": "557920e5",
    "metadata": {},
    "outputs": [],
    "source": []
