Modify NLP & RL

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -229,36 +229,86 @@
     "<img src=\"https://miro.medium.com/v2/resize:fit:1136/format:webp/1*x6aahsfT5wtqL6x5Xj-cEg.png\" width=500>\n",
     "\n",
     "### Negative sampling\n",
-    "In practice, Skip-Gram with softmax is computationally expensive for large vocabularies. To address this, **negative sampling** or **hierarchical softmax** is often used to approximate the full softmax efficiently.\n",
+    "In practice, computing the softmax probability over a large vocabulary size is very expensive. To address this, **negative sampling** is often used to approximate the full softmax efficiently. Instead of predicting the correct word among all vocabulary items, the model only focuses on predicting\n",
     "\n",
-    "To sample a context word, $c$, certain weight is used instead of the random distribution to prevent over selecting most common words\n",
+    "1. The positive sample (actual target word)\n",
     "\n",
-    "Note: summing over the whole vocabulary in the denominator of the softmax part makes this model computationally expensive. To solve this, we can use a hierarchical softmax classifier instead of a normal classifier to speed up the computation\n",
+    "2. A few negative samples (random words assumed to be incorrect)\n",
+    "\n",
+    "Essentially, negative sampling simplifies a multi-class classification problem to a series of binary classification problems\n",
+    "\n",
+    "#### Steps Applying Negative Sampling to CBOW and Skip-Gram\n",
+    "\n",
+    "The previous steps for CBOW and Skip-Gram (Steps 1 to 6) remain the same as before. The only modification is in step 7 (softmax) and step 8 (cross-entropy loss), where we replace the full softmax with a more efficient negative sampling procedure.\n",
+    "\n",
+    "* For **CBOW**, instead of calculating the probability with softmax:\n",
+    "\n",
+    "$$\n",
+    "p_j = \\frac{\\exp(u_j)}{\\sum_{k=0}^{V-1} \\exp(u_k)}\n",
+    "$$\n",
+    "\n",
+    "we compute a binary classification objective using the sigmoid function. For each training example, we have:\n",
+    "- One positive sample (the true center word)\n",
+    "- $K$ negative samples (randomly chosen words not in the context)\n",
+    "\n",
+    "This works well because, in a large vocabulary, randomly sampled words are highly unlikely to be semantically related to the true context.\n",
+    "\n",
+    "The loss for one CBOW example becomes:\n",
+    "\n",
+    "$$\n",
+    "L = -\\log \\sigma(h \\cdot v'_{\\text{target}}) - \\sum_{k=1}^{K} \\log \\sigma(-h \\cdot v'_{\\text{neg}_k})\n",
+    "$$\n",
+    "\n",
+    "$h$: the averaged context embedding\n",
+    "\n",
+    "$v'_{\\text{target}}$: the output embedding of the ground truth label (relevant word)\n",
+    "\n",
+    "$v'_{\\text{neg}_k}$: the output embeddings of each negative sampled words (non-relevant words)\n",
+    "\n",
+    "$\\sigma$: the sigmoid function\n",
+    "\n",
+    "Essentially, the loss function uses dot products to score how likely a given word is related to the context. It encourages high dot products for true center words and low dot products for unrelated (negative) words. This approach is much more computationally efficient than full softmax, as it only requires evaluating a few word pairs per example.\n",
     "\n",
     "\n",
+    "* For **Skip-Gram**, the process is similar, but repeated for each context word. For each training pair (center word, context word), we compute:\n",
     "\n",
-    "Use the same approach as the skip-gram model to sample a context word, $c$, and a target, $t$ and set this pair as the positive pair. Then, use $c$ and pair it up with $k$ random selected words from the vocabulary dictionary to create $k$ negative samples\n",
+    "$$\n",
+    "L = -\\log \\sigma(v_{\\text{center}} \\cdot v'_{\\text{context}}) - \\sum_{k=1}^{K} \\log \\sigma(-v_{\\text{center}} \\cdot v'_{\\text{neg}_k})\n",
+    "$$\n",
     "\n",
-    "To train the embedding matrix, we covert the both $c$ and $t$ into their embeddings and feed it into a network with logistic units to calculate the probability on how likely the context word and target word will appear together, where\n",
+    "$v_{\\text{center}}$: the embedding of the center word (input)\n",
     "\n",
-    "$$P(y=1|c, t) = \\sigma(\\theta_t^Te_c)$$\n",
+    "$v'_{\\text{context}}$: the output embedding of the true context word\n",
     "\n",
-    "$P(y=1|c, t)$: the probability of the context and the target word appears simultaneously\n",
+    "$v'_{\\text{neg}_k}$: the embeddings of negative samples\n",
     "\n",
-    "For each iteration, the model is only trained on one positive example and $k$ negative examples with a set of binary classifiers. This speeds up the training speed significantly compares to the skip-gram model\n",
+    "Since Skip-Gram generates one training pair for each context word (there are $2C$ context words), the total loss for one center word is the sum over all context words in its window:\n",
     "\n",
-    "<img src=\"https://aegis4048.github.io/jupyter_images/neg_opt_1.png\">\n",
+    "$$\n",
+    "L_{\\text{total}} = \\sum_{j=1}^{2C} \\left[-\\log \\sigma(v_{\\text{center}} \\cdot v'_{\\text{context}_j}) - \\sum_{k=1}^{K} \\log \\sigma(-v_{\\text{center}} \\cdot v'_{\\text{neg}_{j,k}})\\right]\n",
+    "$$\n",
+    "\n",
+    "The key difference between CBOW and Skip-Gram with negative sampling is that CBOW computes the loss once per training example (center word target), where skip-gram will iteratively compute loss $2C$ times for each context word within the context window\n",
+    "\n",
     "\n",
     "## GloVe\n",
-    "The GloVe model uses a co-occurence matrix $X$, where each $X_{i,j}$ denotees for the number of times that a target word $i$ appears in the context of the word $j$\n",
+    "The GloVe is another model that learns the word embedding based on global co-occurrence statistics. The key idea of GloVe is that words that appear in similar contexts tend to have similar meanings. So, instead of learning through predicting the word like Word2Vec, GloVe counts how often two words appears together in the corpus (co-occurence). If two words have high co-occurence count, it suggests they have similar semantic meaning, where two words have low co-occurence count, then they have different semantic meaning\n",
+    "\n",
+    "uses a co-occurence matrix $X$, where each $X_{i,j}$ denotees for the number of times that a target word $i$ appears in the context of the word $j$\n",
     "\n",
     "Its cost function is\n",
     "$$J(\\theta) = \\frac{1}{2}\\sum_{i, j=1}^{m}f(X_{i,j})(\\theta_t^Te_c + b_i + b'_j + log(X_{i,j}))^2$$\n",
     "\n",
     "$f$: a weighting function such that $f(X_{i,j}) = 0$ when $X_{i,j} = 0$ (do not add loss if two words are not in context)\n",
     "\n",
-    "Initially, we initialize $e$ and $\\theta$ randomly. After training, given the symmetry that $e$ and $\\theta$ play in this model, the final word embedding $e_w^{final} = \\frac{e_w + \\theta_w}{2}$\n",
-    "\n",
+    "Initially, we initialize $e$ and $\\theta$ randomly. After training, given the symmetry that $e$ and $\\theta$ play in this model, the final word embedding $e_w^{final} = \\frac{e_w + \\theta_w}{2}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d36c0934",
+   "metadata": {},
+   "source": [
     "# Visualize word embeddings in low dimension:\n",
     "## t-SNE (t-distributed Stochastic Neighbor Embedding)\n",
     "t-SNE is a technique aimed at reducing high-dimensional embeddings into a lower dimensional space. In practice, it is commonly used to visualize word vectors in the 2D space\n",
@@ -377,7 +427,7 @@
     "\n",
     "$c^{<t>} = \\Gamma_u * \\tilde c^{<t>} + (1 - \\Gamma_u) * c^{<t - 1>}$: the function that decides whether the value $c^{<t>}$ will be updated to the value of $\\tilde c^{<t>}$. $*$ denotes for element-wise multiplication so, $c^{<t>}$, $\\tilde c^{<t>}$, $\\Gamma_u$, and $\\Gamma_r$ must have the same dimensions\n",
     "\n",
-    "Note: since $\\Gamma_r$ and $\\Gamma_u$ are calculated with a sigmoid function, their actual values will be very close to either 0 or 1, which indiate relavent if $\\Gamma_r \\approx 1$ or irrelavent if $\\Gamma_r \\approx 0$ and update the value if $\\Gamma_u \\approx 1$ or not update the value if $\\Gamma_u \\approx 0$. This update can be partial since all variables are matrices\n",
+    "Note: since $\\Gamma_r$ and $\\Gamma_u$ are calculated with a sigmoid function, their actual values will be very close to either 0 or 1, which indiate relevant if $\\Gamma_r \\approx 1$ or irrelevant if $\\Gamma_r \\approx 0$ and update the value if $\\Gamma_u \\approx 1$ or not update the value if $\\Gamma_u \\approx 0$. This update can be partial since all variables are matrices\n",
     "\n",
     "If $\\Gamma_u \\approx 1$, $c^{<t>} = \\tilde c^{<t>}$\n",
     "\n",
@@ -569,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "646435b7",
+   "id": "56337673",
    "metadata": {},
    "source": [
     "# BLEU Score (Bilingual Evaluation Understudy)\n",
@@ -631,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e550979f",
+   "id": "2922da45",
    "metadata": {},
    "source": [
     "# Sentiment classification\n",
@@ -1192,7 +1242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72f1e777",
+   "id": "ba799d5d",
    "metadata": {},
    "source": [
     "# Reinforcement Learning From Human Feedback\n",
@@ -1202,7 +1252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f30f5102",
+   "id": "8c5ae358",
    "metadata": {},
    "source": [
     "# Agentic LLMs"
@@ -1220,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "557920e5",
+   "id": "30626200",
    "metadata": {},
    "outputs": [],
    "source": []
